--- a/Glazed/glazed.html
+++ b/Glazed/glazed.html
@@ -158,7 +158,7 @@ $(document).ready(function(){
     
     //onload loading 
    
-    if(window.location.href.indexOf("customize") === -1) {
+    if(window.location.href.indexOf(".com/customize") === -1) {
          {block:IfNotHideLoadingScreen}
         $(window).on('load', function () {
             $("#loading").css("opacity", 0); 
@@ -167,9 +167,6 @@ $(document).ready(function(){
               }, 500);
         }); 
         {/block:IfNotHideLoadingScreen}
-        {block:IfHideLoadingScreen}
-            $("#loading").css("display", "none"); 
-        {/block:IfHideLoadingScreen}
     } else {
         $("#loading").css("display", "none"); 
     }
@@ -399,7 +396,6 @@ header, main, nav, footer, .about {
     transition: all 0.5s ease;
     opacity: 1;
     display: flex;
-   
     position: fixed;
     width: 100%;
     top: 0;
@@ -410,6 +406,9 @@ header, main, nav, footer, .about {
     z-index: 99;
     background-color: var(--bg-color);
     backdrop-filter: blur(10px);
+    {block:IfHideLoadingScreen}
+    display: none;
+    {block:IfHideLoadingScreen}
 }
 
 .lds-dual-ring {
