--- a/Glazed/glazed.html
+++ b/Glazed/glazed.html
@@ -665,6 +665,10 @@ header {
     margin-top: 30px;
 }
 
+.post_content ul, .post_content ol {
+    list-style-position: inside;
+}
+
 /*types*/
 
 /*audio, video and others*/
