fixed bug with cropped asks

--- a/Glazed/glazed.html
+++ b/Glazed/glazed.html
@@ -854,8 +854,7 @@ header {
 }
 
 .post .question_text, .post .answer_text { 
-    max-height: 150px;
-    overflow: hidden;
+    max-height: 100%;
 }
 
 .answer_container {
