adjust modal image

--- a/See_The_Stars_With_Me,_Again/seethestarswithmeagain.html
+++ b/See_The_Stars_With_Me,_Again/seethestarswithmeagain.html
@@ -982,6 +982,7 @@ figure, video, iframe, .video, .video iframe, figure.tmblr-embed.tmblr-full, fig
 .modal-content img {
     width: 150px;
     height: 100%;
+    object-fit: cover;
 }
 
 
