--- a/See_The_Stars_With_Me,_Again/seethestarswithmeagain.html
+++ b/See_The_Stars_With_Me,_Again/seethestarswithmeagain.html
@@ -447,6 +447,7 @@ header {
 
 .caption a {
     text-decoration: underline;
+    word-break: break-all;
 }
 
 {block:IfHideCaptions}
@@ -1029,7 +1030,7 @@ display: grid;
     position: relative;
 }
 
-@media only screen and (max-width: 1024px) { 
+@media only screen and (max-width: 1366px) { 
     .post img {
         width: 100%;
     }
