--- a/Glazed/glazed.html
+++ b/Glazed/glazed.html
@@ -72,7 +72,7 @@ Support me on Ko-fi ? https://ko-fi.com/palemomos
     <meta name="text:About Age" content="Age">
     <meta name="text:About Zodiac" content="Zodiac">
     <meta name="text:About Location" content="Location">
-    <meta name="text:About Ocuppation" content="Ocuppation">
+    <meta name="text:About Occupation" content="Occupation">
     <meta name="text:About Pronouns" content="Pronouns">
     <meta name="text:About Description" content="Your Mini Description">
     <meta name="text:About Skill 1 Label" content="Your Skill 1">
@@ -2178,12 +2178,12 @@ progress::-webkit-progress-bar {
                                     {text:About Location}
                                 </li>
                             {/block:ifAboutLocation}
-                            {block:ifAboutOcuppation}
+                            {block:ifAboutOccupation}
                                 <li>
-                                    <span>Ocuppation:</span>
-                                    {text:About Ocuppation}
+                                    <span>Occupation:</span>
+                                    {text:About Occupation}
                                 </li>
-                             {/block:ifAboutOcuppation}
+                             {/block:ifAboutOccupation}
                              {block:ifAboutPronouns}
                                 <li>
                                     <span>Pronouns:</span>
